Fix long message overflow by owner + hide text when no contact info is given in pet's card

--- a/client/src/CSS/Explore.css
+++ b/client/src/CSS/Explore.css
@@ -112,6 +112,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   max-width: 80%;
+  word-break: break-all;
 }
 
 @media (max-width: 1470px) {
